--- a/index.html
+++ b/index.html
@@ -3,15 +3,14 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Hạ cỡ chữ nhỏ - Phương pháp viết chữ tròn li</title>
+<title>Gallery PRO</title>
 
 <style>
 html,body{
   margin:0;
   background:#000;
   color:#fff;
-  overflow-x:hidden;   /* chỉ khóa ngang */
-  overflow-y:auto;    /* cho phép cuộn dọc */
+  overflow-x:hidden;
   font-family:Arial
 }
 
@@ -24,7 +23,6 @@ header{
 header img{height:72px}
 header h1{font-size:18px;margin:0}
 
-/* ===== ALBUM ===== */
 #album{
   display:grid;
   grid-template-columns:repeat(auto-fill,minmax(160px,1fr));
@@ -33,60 +31,35 @@ header h1{font-size:18px;margin:0}
   height:calc(100vh - 60px);
   overflow-y:auto
 }
-/* ========== MOBILE FULL SIZE THUMBNAILS ========== */
-@media (max-width: 768px) {
-  body {
-    overflow-y: auto !important;
-  }
-
-  #album {
-    display: grid !important;
-    grid-template-columns: repeat(2, 1fr) !important;
-    gap: 10px !important;
-    padding: 10px !important;
-    height: auto !important;
-    overflow-y: auto !important;
-  }
-
-  .thumb {
-    width: 100% !important;
-    background: #000 !important;
-    border-radius: 12px !important;
-    padding: 0 !important;
-  }
-
-  .thumb img {
-    width: 100% !important;
-    height: auto !important;
-    object-fit: contain !important;
-    display: block !important;
-  }
-}
 
 .thumb{
   background:#111;
   border-radius:8px;
   overflow:hidden;
-  cursor:pointer
+  cursor:pointer;
+  aspect-ratio:3/4;
+  display:flex;
+  align-items:center;
+  justify-content:center
 }
+
 .thumb img{
   width:100%;
   height:100%;
   object-fit:contain;
-  background:#000
+  display:block;
+  opacity:0;
+  transition:opacity .3s ease
 }
 
-/* ===== VIEWER ===== */
 #viewer{
   position:fixed;
   inset:0;
   background:#000;
   display:none;
-  z-index:999;
-  box-sizing:border-box
+  z-index:999
 }
 
-/* ===== TOP BAR ===== */
 .top-controls{
   position:absolute;
   top:0;
@@ -100,6 +73,7 @@ header h1{font-size:18px;margin:0}
   z-index:20;
   pointer-events:none
 }
+
 .top-controls div{
   font-size:34px;
   color:#aaa;
@@ -116,30 +90,29 @@ header h1{font-size:18px;margin:0}
   z-index:20
 }
 
-/* ===== IMAGE ZONE ===== */
 #imageWrap{
   position:absolute;
   top:70px;
   left:0;
   right:0;
-  bottom:120px; /* strip 100px + 20px gap */
+  bottom:120px;
   display:flex;
   justify-content:center;
   align-items:center;
   overflow:hidden;
   touch-action:none
 }
+
 #mainImage{
   max-width:100%;
   max-height:100%;
-  transition:transform .25s ease,opacity .25s ease;
-  transform-origin:center;
+  object-fit:contain;
+  transition:transform .25s ease, opacity .25s ease;
+  will-change:transform;
   user-select:none;
-  pointer-events:none;
-  object-fit:contain
+  pointer-events:none
 }
 
-/* ===== THUMB STRIP ===== */
 #thumbStrip{
   position:absolute;
   bottom:0;
@@ -148,33 +121,22 @@ header h1{font-size:18px;margin:0}
   height:100px;
   background:rgba(0,0,0,.75);
   display:flex;
-  justify-content:center;
   align-items:center;
   gap:8px;
-  padding:8px 0;
-  overflow-x:auto;
-  overflow-y:hidden;
-  z-index:20;
-  scroll-behavior:smooth;
-  -webkit-overflow-scrolling:touch;
-  touch-action:pan-x;
+  padding:8px;
+  overflow-x:auto
 }
 
 #thumbStrip img{
   height:100%;
-  cursor:pointer;
   opacity:.5;
+  cursor:pointer;
   border-radius:4px
 }
+
 #thumbStrip img.active{
   opacity:1;
   outline:2px solid #0af
-}
-
-#thumbStrip::-webkit-scrollbar{height:6px}
-#thumbStrip::-webkit-scrollbar-thumb{
-  background:#555;
-  border-radius:3px
 }
 </style>
 </head>
@@ -182,8 +144,7 @@ header h1{font-size:18px;margin:0}
 <body>
 
 <header>
-  <img src="logo.png">
-  <h1>Hạ cỡ chữ nhỏ - Phương pháp viết chữ tròn li</h1>
+  <h1>Gallery PRO Engine</h1>
 </header>
 
 <div id="album"></div>
@@ -204,101 +165,110 @@ header h1{font-size:18px;margin:0}
 </div>
 
 <script>
-const total=20
-const album=document.getElementById('album')
-const viewer=document.getElementById('viewer')
-const img=document.getElementById('mainImage')
-const counter=document.getElementById('counter')
-const strip=document.getElementById('thumbStrip')
+const total = 20
+const album = document.getElementById('album')
+const viewer = document.getElementById('viewer')
+const img = document.getElementById('mainImage')
+const counter = document.getElementById('counter')
+const strip = document.getElementById('thumbStrip')
 
-let index=0,scale=1,x=0,y=0
-let drag=false,startX=0,startY=0
-let anim=false,lastTap=0
-let isPinching=false
+let index = 0
+let scale = 1
+let x = 0
+let y = 0
+let anim = false
+let isPinching = false
+let drag = false
+let startX = 0
+let startY = 0
+let lastUpdate = 0
 
-for(let i=1;i<=total;i++){
-  const n=String(i).padStart(2,'0')
+const preloadCache = new Set()
 
-  const d=document.createElement('div')
-  d.className='thumb'
-  d.innerHTML=`<img src="images/${n}.jpg">`
-  d.onclick=()=>open(i-1)
+function createThumb(i){
+  const n = String(i+1).padStart(2,'0')
+  const d = document.createElement('div')
+  d.className = 'thumb'
+
+  const im = document.createElement('img')
+  im.dataset.src = `thumbs/${n}.jpg`
+
+  d.appendChild(im)
+  d.onclick = ()=>open(i)
   album.appendChild(d)
 
-  const t=document.createElement('img')
-  t.src=`images/${n}.jpg`
-  t.onclick=()=>jump(i-1)
+  io.observe(im)
+
+  const t = document.createElement('img')
+  t.loading = 'lazy'
+  t.src = `thumbs/${n}.jpg`
+  t.onclick = ()=>jump(i)
   strip.appendChild(t)
 }
 
+for(let i=0;i<total;i++) createThumb(i)
+
+const io = new IntersectionObserver(entries=>{
+  entries.forEach(e=>{
+    if(e.isIntersecting){
+      const im = e.target
+      im.src = im.dataset.src
+      im.onload = ()=> im.style.opacity = 1
+      io.unobserve(im)
+    }
+  })
+},{root:album, rootMargin:'200px'})
+
 function preload(i){
   [-1,1].forEach(o=>{
-    let n=i+o
-    if(n>=0&&n<total){
-      const im=new Image()
-      im.src=`images/${String(n+1).padStart(2,'0')}.jpg`
+    const n = i+o
+    if(n>=0 && n<total){
+      if(preloadCache.has(n)) return
+      const im = new Image()
+      im.src = `medium/${String(n+1).padStart(2,'0')}.jpg`
+      preloadCache.add(n)
     }
   })
 }
 
 function open(i){
-  index=i
+  index = i
   viewer.style.display='block'
   document.body.style.overflow='hidden'
   reset()
   load()
 }
+
 function close(){
   viewer.style.display='none'
   document.body.style.overflow='auto'
 }
 
 function load(){
-  img.style.opacity=0
-  const n=String(index+1).padStart(2,'0')
-  img.src=`images/${n}.jpg`
-  counter.textContent=`${index+1}/${total}`
+  img.style.opacity = 0
+  const n = String(index+1).padStart(2,'0')
+  img.src = `medium/${n}.jpg`
+  counter.textContent = `${index+1}/${total}`
   setActive()
   preload(index)
-  requestAnimationFrame(()=>img.style.opacity=1)
+  requestAnimationFrame(()=>img.style.opacity = 1)
 }
 
 function slide(d){
-  if(anim || scale!==1 || isPinching)return
-  anim=true
-  img.style.transform=`translateX(${-d*120}px) scale(${scale})`
-  img.style.opacity=0
+  if(anim || scale!==1 || isPinching) return
+  anim = true
   setTimeout(()=>{
-    index=(index+d+total)%total
+    index = (index + d + total) % total
     reset()
     load()
-    img.style.transition='none'
-    img.style.transform=`translateX(${d*120}px)`
-    requestAnimationFrame(()=>{
-      img.style.transition='transform .25s ease,opacity .25s ease'
-      img.style.transform='translate(0,0)'
-      img.style.opacity=1
-      anim=false
-    })
-  },250)
+    anim = false
+  },200)
 }
 
 function setActive(){
   [...strip.children].forEach((t,i)=>{
     t.classList.toggle('active',i===index)
   })
-
-  const activeThumb = strip.children[index]
-  const stripRect = strip.getBoundingClientRect()
-  const thumbRect = activeThumb.getBoundingClientRect()
-
-  const offset =
-    thumbRect.left -
-    stripRect.left -
-    stripRect.width / 2 +
-    thumbRect.width / 2
-
-  strip.scrollLeft += offset
 }
 
 function jump(i){
@@ -308,179 +278,33 @@ function jump(i){
 }
 
 function reset(){
-  scale=1;x=0;y=0
+  scale=1
+  x=0
+  y=0
   update()
 }
+
 function update(){
-  img.style.transform=`translate(${x}px,${y}px) scale(${scale})`
+  const now = performance.now()
+  if(now - lastUpdate < 16) return
+  lastUpdate = now
+  img.style.transform = `translate(${x}px,${y}px) scale(${scale})`
 }
 
-/* ===== ZOOM WHEEL ===== */
 viewer.addEventListener('wheel',e=>{
   e.preventDefault()
   const delta = e.deltaY < 0 ? 0.1 : -0.1
   scale += delta
-  scale = Math.max(1, Math.min(scale, 4))
+  scale = Math.max(1,Math.min(scale,4))
   update()
 },{passive:false})
 
-/* ===== DOUBLE TAP ZOOM (MOBILE – PHÓNG TO / THU NHỎ ỔN ĐỊNH) ===== */
-let lastTapTime = 0
-let lastTapX = 0
-let lastTapY = 0
-
-viewer.addEventListener('touchend', e => {
-  if (e.changedTouches.length !== 1) return
-  if (isPinching) return
-  if (drag) return
-
-  const now = Date.now()
-  const touch = e.changedTouches[0]
-  const delta = now - lastTapTime
-
-  const dx = Math.abs(touch.clientX - lastTapX)
-  const dy = Math.abs(touch.clientY - lastTapY)
-
-  if (delta > 0 && delta < 300 && dx < 30 && dy < 30) {
-    // Nếu đang gần mức thu nhỏ → phóng to
-    if (scale <= 1.05) {
-      scale = 2
-    } else {
-      scale = 1
-      x = 0
-      y = 0
-    }
-    update()
-    lastTapTime = 0
-  } else {
-    lastTapTime = now
-    lastTapX = touch.clientX
-    lastTapY = touch.clientY
-  }
-})
-
-
-/* ===== DOUBLE CLICK ZOOM (PC) ===== */
-viewer.addEventListener('dblclick', e => {
-  if (scale === 1) {
-    scale = 2
-  } else {
-    scale = 1
-    x = 0
-    y = 0
-  }
+viewer.addEventListener('dblclick',()=>{
+  if(scale===1) scale=2
+  else { scale=1; x=0; y=0 }
   update()
 })
 
-/* ===== PAN PC (ỔN ĐỊNH 100%) ===== */
-let panActive = false
-let panStartX = 0
-let panStartY = 0
-
-viewer.addEventListener('mousedown', e => {
-  if (scale <= 1) return
-  if (e.button !== 0) return
-
-  panActive = true
-  panStartX = e.clientX - x
-  panStartY = e.clientY - y
-
-  viewer.style.cursor = 'grabbing'
-})
-
-window.addEventListener('mousemove', e => {
-  if (!panActive) return
-
-  x = e.clientX - panStartX
-  y = e.clientY - panStartY
-  update()
-})
-
-function stopPanPC() {
-  panActive = false
-  viewer.style.cursor = 'default'
-}
-
-window.addEventListener('mouseup', stopPanPC)
-window.addEventListener('blur', stopPanPC)
-document.addEventListener('visibilitychange', stopPanPC)
-viewer.addEventListener('mouseleave', stopPanPC)
-
-
-/* ===== TOUCH ===== */
-let dist=0,swipeX=0
-
-viewer.addEventListener('touchstart',e=>{
-  if(e.touches.length===1){
-    swipeX=e.touches[0].clientX
-    if(scale>1){
-      drag=true
-      startX=e.touches[0].clientX-x
-      startY=e.touches[0].clientY-y
-    }
-  }
-  if(e.touches.length===2){
-    isPinching=true
-    dist=Math.hypot(
-      e.touches[0].clientX-e.touches[1].clientX,
-      e.touches[0].clientY-e.touches[1].clientY
-    )
-  }
-})
-
-viewer.addEventListener('touchmove',e=>{
-  if(e.touches.length===2){
-    e.preventDefault()
-    let d=Math.hypot(
-      e.touches[0].clientX-e.touches[1].clientX,
-      e.touches[0].clientY-e.touches[1].clientY
-    )
-    scale*=d/dist
-    scale=Math.max(1,Math.min(scale,4))
-    dist=d
-    update()
-  }
-  if(drag&&e.touches.length===1){
-    x=e.touches[0].clientX-startX
-    y=e.touches[0].clientY-startY
-    update()
-  }
-},{passive:false})
-
-viewer.addEventListener('touchend',e=>{
-  drag=false
-  isPinching=false
-
-  if(scale===1){
-    let dx=e.changedTouches[0].clientX-swipeX
-    if(dx>60)slide(-1)
-    if(dx<-60)slide(1)
-  }
-})
-
-/* ===== STRIP TOUCH FIX ===== */
-strip.addEventListener('touchstart',e=>e.stopPropagation(),{passive:true})
-strip.addEventListener('touchmove',e=>e.stopPropagation(),{passive:true})
-strip.addEventListener('touchend',e=>e.stopPropagation(),{passive:true})
-
-/* ===== DRAG STRIP PC ===== */
-let isDown=false,startXStrip=0,scrollLeftStrip=0
-strip.addEventListener('mousedown',e=>{
-  isDown=true
-  startXStrip=e.pageX-strip.offsetLeft
-  scrollLeftStrip=strip.scrollLeft
-})
-strip.addEventListener('mouseleave',()=>isDown=false)
-strip.addEventListener('mouseup',()=>isDown=false)
-strip.addEventListener('mousemove',e=>{
-  if(!isDown)return
-  e.preventDefault()
-  const x=e.pageX-strip.offsetLeft
-  const walk=(x-startXStrip)*1.5
-  strip.scrollLeft=scrollLeftStrip-walk
-})
-
-/* ===== CONTROLS ===== */
 document.getElementById('prev').onclick=()=>slide(-1)
 document.getElementById('next').onclick=()=>slide(1)
 document.getElementById('close').onclick=close
