--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Hạ cỡ chữ nhỏ - Phương pháp viết chữ tròn li</title>
+<title>A4 - Hạ cỡ chữ nhỏ - Phương pháp viết chữ tròn li</title>
 
 <style>
 html,body{
@@ -210,7 +210,7 @@ header h1{font-size:18px;margin:0}
 
 <header>
   <img src="logo.png">
-  <h1>Hạ cỡ chữ nhỏ - Phương pháp viết chữ tròn li</h1>
+  <h1>A4 - Hạ cỡ chữ nhỏ - Phương pháp viết chữ tròn li</h1>
 </header>
 
 <div id="album"></div>
@@ -523,3 +523,4 @@ document.getElementById('close').onclick=close
 
 </body>
 </html>
+
