--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@ header h1{font-size:18px;margin:0}
   href="https://www.baolongedu.site/huong-dan-thanh-toan" 
   target="_blank"
 >
-  TẢI XUỐNG
+  A4 - TẢI XUỐNG
 </a>
 
   <div id="thumbStrip"></div>
@@ -523,4 +523,5 @@ document.getElementById('close').onclick=close
 
 </body>
 </html>
+
 
